force-app/main/default/objects/Practitioner_Fee_Rate__c/Practitioner_Fee_Rate__c.object-meta.xml
<CustomObject>
    <label>Practitioner Fee Rate</label>
    <nameField>
        <displayFormat>PF{000000}</displayFormat>
        <label>Practitioner Fee Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Practitioner Fee Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>