force-app/main/default/objects/Practitioner_Fee_Rate__c/fields/Geographical_Weighting__c.field-meta.xml
<CustomField>
    <fullName>Geographical_Weighting__c</fullName>
    <label>Geographical Weighting</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geographical_Weightings</valueSetName>
    </valueSet>
</CustomField>