force-app/main/default/objects/Practitioner_Fee_Rate__c/fields/Practitioner_Band__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Band__c</fullName>
    <label>Practitioner Band</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Practitioner_Bands</valueSetName>
    </valueSet>
</CustomField>