force-app/main/default/objects/Practitioner_Fee_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Practitioner_Band__c</columns>
    <columns>Geographical_Weighting__c</columns>
    <columns>Hourly_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>